--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,5 +1,9 @@
 @import "./header";
 @import "./hero";
+@import "./collection";
+@import "./whychooseus";
+@import "./step";
+@import "./about";
 @import "./box";
 @import "./card";
 @import "./headquarters";
