--- a/css/main.css
+++ b/css/main.css
@@ -420,16 +420,303 @@ body {
   text-underline-offset: 4px;
 }
 
+.header__burger {
+  display: none;
+}
+
+@media (max-width: 576px) {
+  .header__list {
+    display: none;
+  }
+  .header__burger {
+    display: block;
+  }
+  .header__img {
+    width: 163px;
+    height: 18px;
+  }
+}
+
 /* Hero Section Style */
-.hero {
-  background-image: url("../../images/hero-bg.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
+.hero__section {
+  background-image: url("../../images/heroImg.png");
+  background-size: cover;
   padding: 116px 85px;
   border-radius: 10px;
 }
 
-.hero__title {
+.hero__section__title {
+  width: 493px;
+  font-size: 72px;
+  font-weight: 900;
+  font-family: "Fraunces", serif;
+  color: #FEFCF7;
+  margin-bottom: 32px;
+}
+
+.hero__section__text {
+  width: 445px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #a8a7a5;
+  line-height: 26px;
+  margin-bottom: 56px;
+}
+
+.hero__section__link {
+  padding: 17px 30px;
+  background-color: #0E8784;
+  color: #FEFCF7;
+  font-size: 18px;
+  font-weight: 800;
+  font-family: "Fraunces", serif;
+  text-decoration: none;
+  border-radius: 10px;
+  -webkit-transition: 0.8s ease;
+  transition: 0.8s ease;
+}
+
+.hero__section__link:hover {
+  background-color: #12cfccc2;
+  -webkit-box-shadow: 2px 2px 3px #256463,  -2px -2px 3px #256463;
+          box-shadow: 2px 2px 3px #256463,  -2px -2px 3px #256463;
+}
+
+/* Collection Section Style */
+.collection__section {
+  margin-top: -100px;
+  margin-bottom: 100px;
+}
+
+.collection__cards {
+  background-image: url(../../images/ourcollection.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 30px;
+  padding-top: 260px;
+  padding-left: 65px;
+}
+
+.collection__card {
+  text-align: center;
+  margin-top: 290px;
+}
+
+.collection__card__title {
+  font-size: 24px;
+  font-weight: 900;
+  font-family: "Fraunces", serif;
+  margin-bottom: 24px;
+  color: #333D4B;
+}
+
+.collection__card__text {
+  width: 255px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #333D4B;
+}
+
+/* Why choose us Section Style */
+.why-us {
+  position: relative;
+  width: 100%;
+  height: 577px;
+  background-color: #2C343E;
+  border-radius: 10px;
+  text-align: center;
+  margin-bottom: 200px;
+}
+
+.why-us__title {
+  font-size: 40px;
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  color: #FEFCF7;
+  padding-top: 100px;
+}
+
+.why-us__text {
+  width: 530px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  color: #fefcf7a8;
+  display: inline-block;
+  padding-top: 32px;
+}
+
+.features {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 86px;
+  margin: 0 auto;
+  gap: 30px;
+}
+
+.features__card {
+  width: 350px;
+  background-color: #0E8784;
+  border-radius: 8px;
+}
+
+.featured__image {
+  margin-top: 72px;
+  margin-bottom: 56px;
+}
+
+.fa-solid {
+  margin-top: 72px;
+  margin-bottom: 56px;
+  width: 75px;
+  height: 72px;
+  font-size: 65px;
+  color: #FDD6BA;
+}
+
+.features__title {
+  font-size: 24px;
+  color: #FEFCF7;
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  margin-bottom: 24px;
+}
+
+.features__text {
+  width: 255px;
+  font-size: 16px;
+  color: #fefcf7b7;
+  line-height: 26px;
+  font-weight: 400;
+  margin-bottom: 24px;
+  display: inline-block;
+  margin-bottom: 48px;
+}
+
+/* How it works Section Style */
+.steps__section {
+  position: relative;
+  padding: 100px 80px;
+}
+
+.step__title {
+  font-size: 24px;
+  color: #83888F;
+  font-family: "Fraunces", serif;
+  font-weight: 900;
+  margin-bottom: 80px;
+}
+
+hr {
+  border: none;
+  height: 1px;
+  width: 760px;
+  border: 2px solid #FDD6BA;
+  background-color: #FDD6BA;
+  position: absolute;
+}
+
+.step__spans {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 335px;
+  position: relative;
+  top: 26px;
+  z-index: 5;
+}
+
+.step__span {
+  display: block;
+  width: 31px;
+  height: 31px;
+  border: 2px solid #0E8784;
+  background-color: #FEFCF7;
+  border-radius: 31px;
+}
+
+.step__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 95px;
+  margin-top: 82px;
+}
+
+.step__number {
+  display: inline-block;
+  font-size: 72px;
+  font-weight: 900;
+  font-family: "Fraunces", serif;
+  color: #FDD6BA;
+  margin-bottom: 38px;
+}
+
+.step-subtitle {
+  width: 255px;
+  font-size: 32px;
+  font-weight: 900;
+  font-family: "Fraunces", serif;
+  color: #333D4B;
+  margin-bottom: 43px;
+}
+
+.step__discription {
+  width: 285px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #333D4B;
+  line-height: 26px;
+  margin-bottom: 68px;
+}
+
+.step__link {
+  display: inline-block;
+  padding: 15px 25px;
+  background-color: #0E8784;
+  font-size: 16px;
+  font-weight: 900;
+  text-decoration: none;
+  color: #FEFCF7;
+  font-family: "Fraunces", serif;
+  -webkit-transition: 0.8s ease;
+  transition: 0.8s ease;
+  border-radius: 10px;
+  margin-bottom: 200px;
+}
+
+.step__link:hover {
+  background-color: #229492dc;
+  -webkit-box-shadow: 1px 1px 3px #cccbcb;
+          box-shadow: 1px 1px 3px #cccbcb;
+}
+
+/* Hero Section Style */
+.about {
+  background-image: url("../../images/hero-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  width: 100%;
+  height: 450px;
+  padding-top: 100px;
+  padding-left: 85px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.about__title {
   font-size: 40px;
   font-weight: 900;
   font-family: "Fraunces", serif;
@@ -437,12 +724,67 @@ body {
   margin-bottom: 24px;
 }
 
-.hero__text {
+.about__text {
   width: 445px;
   font-size: 16px;
   font-weight: 400;
   color: #fefcf7d0;
   line-height: 26px;
+}
+
+@media (max-width: 768px) {
+  .about {
+    background-image: url("../../images/about-desktop.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    width: 100%;
+    height: 450px;
+  }
+  .about__title {
+    font-size: 32px;
+    font-weight: 900;
+    font-family: "Fraunces", serif;
+    color: #FEFCF7;
+    margin-bottom: 24px;
+  }
+  .about__text {
+    max-width: 398px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #FEFCF7;
+    line-height: 25px;
+  }
+}
+
+@media (max-width: 576px) {
+  .about {
+    background-image: url("../../images/about-mobile.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    width: 100%;
+    height: 450px;
+    text-align: center;
+    padding-left: 0;
+  }
+  .about__title {
+    font-size: 28px;
+    font-weight: 900;
+    font-family: "Fraunces", serif;
+    color: #FEFCF7;
+    margin-bottom: 24px;
+  }
+  .about__text {
+    max-width: 279px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #FEFCF7;
+    line-height: 25px;
+    margin: 0 auto;
+  }
 }
 
 /* Box Section Style */
@@ -456,6 +798,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.box__img {
+  border-radius: 10px;
 }
 
 .box__title {
@@ -473,6 +819,80 @@ body {
   line-height: 26px;
 }
 
+@media (max-width: 768px) {
+  .box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 69px;
+    margin-top: 168px;
+    padding: 0 60px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .box__img {
+    width: 281px;
+    height: 470px;
+  }
+  .box__title {
+    margin-top: 20px;
+    font-size: 32px;
+    font-weight: 900;
+    font-family: "Fraunces";
+    color: #333D4B;
+    margin-bottom: 24px;
+  }
+  .box__text {
+    max-width: 339px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #333D4B;
+    line-height: 25px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    padding: 0 24px;
+  }
+  .box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 120px;
+    padding: 0;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .box__img {
+    width: 327px;
+    height: 400px;
+  }
+  .box__title {
+    font-size: 32px;
+    font-weight: 900;
+    font-family: "Fraunces";
+    color: #333D4B;
+    margin-bottom: 50px;
+    margin: 0;
+    padding-bottom: 30px;
+  }
+  .box__text {
+    max-width: 327px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #333D4B;
+    line-height: 25px;
+    margin: 0 auto;
+  }
+}
+
 /* Card Section Style */
 .cards {
   position: relative;
@@ -488,14 +908,14 @@ body {
   margin-top: 256px;
 }
 
-.card__title {
+.cards__title {
   font-size: 48px;
   font-weight: 900;
   color: #FEFCF7;
   margin-top: 88px;
 }
 
-.card__text {
+.cards__text {
   width: 540px;
   font-size: 16px;
   line-height: 26px;
@@ -504,10 +924,123 @@ body {
   margin-top: 32px;
 }
 
-.card__img {
+.cards__right {
   position: relative;
   top: -80px;
+}
+
+.cards__img {
   border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  .cards {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #2C343E;
+    border-radius: 10px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 300px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    text-align: center;
+    width: 688px;
+    height: 488px;
+  }
+  .cards__right {
+    width: 573px;
+    height: 320px;
+    margin: -200px auto 0;
+  }
+  .cards__img {
+    width: 100%;
+    height: 320px;
+  }
+  .cards__left {
+    margin-top: -150px;
+  }
+  .cards__title {
+    margin: 0;
+    font-size: 32px;
+    font-weight: 900;
+    font-family: "Fraunces";
+    color: #FEFCF7;
+    margin-bottom: 24px;
+  }
+  .cards__text {
+    max-width: 540px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #FEFCF7;
+    line-height: 25px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    padding: 0 25px;
+  }
+  .cards {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #2C343E;
+    border-radius: 10px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    text-align: center;
+    width: 327px;
+    height: 509px;
+    margin: 120px auto 0;
+  }
+  .cards__right {
+    top: 0;
+    width: 279px;
+    height: 156px;
+    margin: -80px auto 0;
+  }
+  .cards__img {
+    width: 100%;
+    height: 156px;
+  }
+  .cards__left {
+    margin-top: -70px;
+  }
+  .cards__title {
+    max-width: 249px;
+    margin: 0;
+    font-size: 28px;
+    font-weight: 900;
+    font-family: "Fraunces";
+    color: #FEFCF7;
+    padding-bottom: 24px;
+    margin: 0 auto;
+  }
+  .cards__text {
+    max-width: 279px;
+    font-size: 15px;
+    font-weight: 300;
+    color: #FEFCF7;
+    line-height: 25px;
+    margin: 0 auto;
+  }
 }
 
 /* Our headquarters Section Style */
@@ -548,6 +1081,88 @@ body {
   font-weight: 400;
   color: #333D4B;
   line-height: 26px;
+}
+
+@media (max-width: 768px) {
+  .headquarters {
+    padding: 0 60px;
+    margin: 168px 0;
+  }
+  .headquarters__title {
+    font-size: 24px;
+    font-weight: 900;
+    color: #83888F;
+    margin-bottom: 72px;
+  }
+  .headquarters__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 70px;
+  }
+  .item__img {
+    display: block;
+    margin-bottom: 45px;
+  }
+  .item--title {
+    font-size: 24px;
+    font-weight: 900;
+    color: #333D4B;
+    margin-bottom: 24px;
+  }
+  .item--text {
+    width: 140px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #333D4B;
+    line-height: 26px;
+  }
+}
+
+@media (max-width: 576px) {
+  .headquarters {
+    padding: 0 60px;
+    margin: 168px 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .headquarters__title {
+    font-size: 24px;
+    font-weight: 900;
+    color: #83888F;
+    margin-bottom: 72px;
+  }
+  .headquarters__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .item__img {
+    display: block;
+    margin-bottom: 45px;
+    margin: 65px auto 47px;
+  }
+  .item--title {
+    font-size: 24px;
+    font-weight: 900;
+    color: #333D4B;
+  }
+  .item--text {
+    width: 140px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #333D4B;
+    line-height: 26px;
+    margin: 22px auto 0;
+  }
 }
 
 /* Footer Section Style */
@@ -595,7 +1210,7 @@ body {
   text-underline-offset: 4px;
 }
 
-.socials {
+.footer__socials {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -608,5 +1223,124 @@ body {
 .fa-brands {
   font-size: 18px;
   color: white;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    margin-top: 8px;
+    background-color: #2C343E;
+    width: 100%;
+  }
+  .footer__section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    padding: 0;
+  }
+  .footer__image {
+    margin: 54px auto 32px;
+  }
+  .footer__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: #83888F;
+    margin: 0 auto 65px;
+  }
+  .footer__item--link {
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #83888F;
+  }
+  .footer__item--link:hover {
+    color: #0E8784;
+    text-decoration: underline;
+    text-underline-offset: 4px;
+  }
+  .footer__socials {
+    display: inline-block;
+    padding-bottom: 54px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 24px;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer {
+    margin-top: 8px;
+    background-color: #2C343E;
+    width: 100%;
+  }
+  .footer__section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    padding: 0;
+  }
+  .footer__image {
+    margin: 54px auto 48px;
+  }
+  .footer__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: #83888F;
+    margin: 0 auto 65px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .footer__item--link {
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #83888F;
+  }
+  .footer__item--link:hover {
+    color: #0E8784;
+    text-decoration: underline;
+    text-underline-offset: 4px;
+  }
+  .footer__socials {
+    padding-bottom: 54px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 24px;
+  }
+  .fa-brands {
+    font-size: 30px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
