--- a/scss/blocks/_box.scss
+++ b/scss/blocks/_box.scss
@@ -5,19 +5,104 @@
     margin-top: 168px;
     padding: 0 60px;
     justify-content: center;
+
+
+    &__img{
+        border-radius: 10px;
+    }
+
+    &__title{
+        font-size: 40px;
+        color: $color-title;
+        font-weight: 900;
+        margin-top: 100px;
+    }
+
+    &__text{
+        width: 540px;
+        margin-top: 32px;
+        font-size: 16px;
+        color: $color-title;
+        line-height: 26px;
+    }
 }
 
-.box__title{
-    font-size: 40px;
-    color: $color-title;
-    font-weight: 900;
-    margin-top: 100px;
+
+
+
+@media (max-width:768px){
+    .box{
+        display: flex;
+        gap: 69px;
+        margin-top: 168px;
+        padding: 0 60px;
+        justify-content: center;
+
+
+
+        &__img{
+            width: 281px;
+            height: 470px;
+        }
+
+        &__title{
+            margin-top: 20px;
+            font-size: 32px;
+            font-weight: 900;
+            font-family: "Fraunces";
+            color: $color-title;
+            margin-bottom: 24px;
+        }
+
+        &__text{
+            max-width: 339px;
+            font-size: 15px;
+            font-weight: 400;
+            color: #333D4B;
+            line-height: 25px;
+        }
+    }
 }
 
-.box__text{
-    width: 540px;
-    margin-top: 32px;
-    font-size: 16px;
-    color: $color-title;
-    line-height: 26px;
+
+
+
+@media (max-width:576px){
+    .container{
+        padding: 0 24px;
+    }
+    .box{
+        display: flex;
+        margin-top: 120px;
+        padding:0;
+        flex-wrap: wrap;
+        flex-direction: column;
+        text-align: center;
+
+
+
+        &__img{
+            width: 327px;
+            height: 400px;
+        }
+
+        &__title{
+            font-size: 32px;
+            font-weight: 900;
+            font-family: "Fraunces";
+            color: $color-title;
+            margin-bottom: 50px;
+            margin: 0;
+            padding-bottom: 30px;
+        }
+
+        &__text{
+            max-width: 327px;
+            font-size: 15px;
+            font-weight: 400;
+            color: #333D4B;
+            line-height: 25px;
+            margin: 0 auto;
+        }
+    }
 }
