--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -7,26 +7,145 @@
     border-radius: 10px;
     justify-content: center;
     margin-top: 256px;
+
+
+    &__title{
+        font-size: 48px;
+        font-weight: 900;
+        color: #FEFCF7;
+        margin-top: 88px;
+    }
+
+    &__text{
+        width: 540px;
+        font-size: 16px;
+        line-height: 26px;
+        font-weight: 400;
+        color: #fefcf7d0;
+        margin-top: 32px;
+    }
+
+    &__right{
+        position: relative;
+        top: -80px;
+    }
+
+    &__img{
+        border-radius: 10px;
+    }
 }
 
-.card__title{
-    font-size: 48px;
-    font-weight: 900;
-    color: #FEFCF7;
-    margin-top: 88px;
+
+
+
+
+
+@media (max-width:768px){
+    .cards{
+        position: relative;
+        display: flex;
+        background-color: $color-bg;
+        border-radius: 10px;
+        justify-content: center;
+        margin-top: 300px;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+        text-align: center;
+        width: 688px;
+        height: 488px;
+
+
+        &__right{
+            width: 573px;
+            height: 320px;
+            margin: -200px auto 0;
+        }
+
+        &__img{
+            width: 100%;
+            height: 320px;
+        }
+
+        &__left{
+            margin-top: -150px;
+        }
+
+        &__title{
+            margin: 0;
+            font-size: 32px;
+            font-weight: 900;
+            font-family: "Fraunces";
+            color: $color-primary;
+            margin-bottom: 24px;
+        }
+
+        &__text{
+            max-width: 540px;
+            font-size: 15px;
+            font-weight: 400;
+            color: #FEFCF7;
+            line-height: 25px;
+            margin: 0 auto;
+        }
+    }
 }
 
-.card__text{
-    width: 540px;
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 400;
-    color: #fefcf7d0;
-    margin-top: 32px;
-}
 
-.card__img{
-    position: relative;
-    top: -80px;
-    border-radius: 10px;
+
+
+@media (max-width:576px){
+    .container{
+        padding: 0 25px;
+    }
+
+    .cards{
+        position: relative;
+        display: flex;
+        background-color: $color-bg;
+        border-radius: 10px;
+        justify-content: center;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+        text-align: center;
+        width: 327px;
+        height: 509px;
+        margin: 120px auto 0;
+
+
+        &__right{
+            top: 0;
+            width: 279px;
+            height: 156px;
+            margin: -80px auto 0;
+        }
+
+        &__img{
+            width: 100%;
+            height: 156px;
+        }
+
+        &__left{
+            margin-top: -70px;
+        }
+
+        &__title{
+            max-width: 249px;
+            margin: 0;
+            font-size: 28px;
+            font-weight: 900;
+            font-family: "Fraunces";
+            color: #FEFCF7;
+            padding-bottom: 24px;
+            margin: 0 auto;
+        }
+
+        &__text{
+            max-width: 279px;
+            font-size: 15px;
+            font-weight: 300;
+            color: #FEFCF7;
+            line-height: 25px;
+            margin: 0 auto;
+        }
+    }
 }
