--- a/css/main.css
+++ b/css/main.css
@@ -424,6 +424,19 @@ body {
   display: none;
 }
 
+@media (max-width: 630px) {
+  .header__list {
+    display: none;
+  }
+  .header__burger {
+    display: block;
+  }
+  .header__img {
+    width: 163px;
+    height: 18px;
+  }
+}
+
 @media (max-width: 576px) {
   .header__list {
     display: none;
@@ -438,15 +451,15 @@ body {
 }
 
 /* Hero Section Style */
-.hero__section {
+.hero {
   background-image: url("../../images/heroImg.png");
   background-size: cover;
   padding: 116px 85px;
   border-radius: 10px;
 }
 
-.hero__section__title {
-  width: 493px;
+.hero__title {
+  max-width: 493px;
   font-size: 72px;
   font-weight: 900;
   font-family: "Fraunces", serif;
@@ -454,8 +467,8 @@ body {
   margin-bottom: 32px;
 }
 
-.hero__section__text {
-  width: 445px;
+.hero__text {
+  max-width: 445px;
   font-size: 16px;
   font-weight: 400;
   color: #a8a7a5;
@@ -463,7 +476,7 @@ body {
   margin-bottom: 56px;
 }
 
-.hero__section__link {
+.hero__link {
   padding: 17px 30px;
   background-color: #0E8784;
   color: #FEFCF7;
@@ -476,10 +489,78 @@ body {
   transition: 0.8s ease;
 }
 
-.hero__section__link:hover {
+.hero__link:hover {
   background-color: #12cfccc2;
   -webkit-box-shadow: 2px 2px 3px #256463,  -2px -2px 3px #256463;
           box-shadow: 2px 2px 3px #256463,  -2px -2px 3px #256463;
+}
+
+@media (max-width: 768px) {
+  .hero {
+    background-image: url("../../images/table-hero.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    max-width: 689px;
+    height: 500px;
+    padding: 104px 0 0 58px;
+    border-radius: 10px;
+  }
+  .hero__title {
+    max-width: 329px;
+    font-size: 48px;
+    font-weight: 900;
+    font-family: "Fraunces";
+    color: #FEFCF7;
+    margin-bottom: 24px;
+  }
+  .hero__text {
+    max-width: 398px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #a8a7a5;
+    line-height: 26px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 576px) {
+  .hero {
+    background-image: url("../../images/mobile-hero.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    max-width: 527px;
+    height: 500px;
+    padding: 100px 0 0 0;
+    border-radius: 10px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
+  .hero__title {
+    max-width: 329px;
+    font-size: 45px;
+    font-weight: 900;
+    font-family: "Fraunces";
+    color: #FEFCF7;
+    margin-bottom: 24px;
+    margin: 0 auto;
+  }
+  .hero__text {
+    max-width: 398px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #a8a7a5;
+    line-height: 26px;
+    margin-bottom: 40px;
+    margin: 24px auto 50px;
+  }
 }
 
 /* Collection Section Style */
@@ -492,15 +573,17 @@ body {
   background-image: url(../../images/ourcollection.png);
   background-repeat: no-repeat;
   background-position: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   gap: 30px;
-  padding-top: 260px;
-  padding-left: 65px;
+  padding-top: 85px;
 }
 
 .collection__card {
@@ -517,16 +600,89 @@ body {
 }
 
 .collection__card__text {
-  width: 255px;
+  max-width: 255px;
   font-size: 16px;
   font-weight: 400;
   color: #333D4B;
 }
 
+@media (max-width: 768px) {
+  .collection__section {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .collection__cards {
+    background-image: url(../../images/ourcollection.png);
+    background-repeat: no-repeat;
+    background-size: 689px auto;
+    background-position: center 130px;
+    gap: 32px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 203px;
+  }
+  .collection__card {
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 50px;
+  }
+  .card__info {
+    margin-left: 36px;
+  }
+  .collection__card__title {
+    text-align: start;
+    padding-top: 10px;
+  }
+  .collection__card__text {
+    max-width: 282px;
+    text-align: start;
+    font-size: 15px;
+    line-height: 25px;
+    font-weight: 400;
+    color: #333D4B;
+  }
+}
+
+@media (max-width: 576px) {
+  .collection__cards {
+    background-image: url(../../images/ourcollection.png);
+    background-repeat: no-repeat;
+    background-size: 350px auto;
+    background-position: center 120px;
+    gap: 32px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 203px;
+  }
+  .collection__card {
+    margin: 10px auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .card__info {
+    margin: 0;
+  }
+  .collection__card__title {
+    padding-top: 10px;
+    text-align: center;
+    margin-right: 30px;
+  }
+  .collection__card__text {
+    text-align: center;
+  }
+}
+
 /* Why choose us Section Style */
 .why-us {
-  position: relative;
-  width: 100%;
   height: 577px;
   background-color: #2C343E;
   border-radius: 10px;
@@ -536,14 +692,14 @@ body {
 
 .why-us__title {
   font-size: 40px;
-  font-family: "Fraunces", serif;
+  font-family: "Fraunces";
   font-weight: 900;
   color: #FEFCF7;
   padding-top: 100px;
 }
 
 .why-us__text {
-  width: 530px;
+  max-width: 530px;
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
@@ -565,7 +721,7 @@ body {
 }
 
 .features__card {
-  width: 350px;
+  max-width: 350px;
   background-color: #0E8784;
   border-radius: 8px;
 }
@@ -578,7 +734,7 @@ body {
 .fa-solid {
   margin-top: 72px;
   margin-bottom: 56px;
-  width: 75px;
+  max-width: 75px;
   height: 72px;
   font-size: 65px;
   color: #FDD6BA;
@@ -593,7 +749,7 @@ body {
 }
 
 .features__text {
-  width: 255px;
+  max-width: 255px;
   font-size: 16px;
   color: #fefcf7b7;
   line-height: 26px;
@@ -603,8 +759,162 @@ body {
   margin-bottom: 48px;
 }
 
+@media (max-width: 768px) {
+  .why-us {
+    max-width: 688px;
+    height: 573px;
+    background-color: #2C343E;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 200px;
+    margin-top: 144px;
+  }
+  .why-us__title {
+    font-size: 32px;
+    font-family: "Fraunces";
+    font-weight: 900;
+    color: #FEFCF7;
+    padding-top: 56px;
+  }
+  .why-us__text {
+    max-width: 540px;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 25px;
+    color: #fefcf7a8;
+    margin: 0 auto;
+    padding-top: 0;
+  }
+  .features {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-top: 75px;
+    margin: 0 auto;
+    gap: 24px;
+  }
+  .features__card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 573px;
+    width: 100%;
+    margin: 0 auto;
+    height: 180px;
+    background-color: #0E8784;
+    border-radius: 8px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .featured__info {
+    margin-left: 55px;
+  }
+  .features__title {
+    text-align: start;
+    margin: 0;
+  }
+  .features__text {
+    max-width: 344px;
+    font-size: 15px;
+    color: #fefcf7b7;
+    line-height: 25px;
+    font-weight: 400;
+    margin: 16px auto 0;
+    text-align: start;
+  }
+}
+
+@media (max-width: 576px) {
+  .why-us {
+    max-width: 327px;
+    height: 902px;
+    background-color: #2C343E;
+    border-radius: 10px;
+    text-align: center;
+    margin: 144px auto;
+  }
+  .why-us__title {
+    font-size: 28px;
+    font-family: "Fraunces";
+    font-weight: 900;
+    color: #FEFCF7;
+    padding-top: 64px;
+  }
+  .why-us__text {
+    margin: 0 auto;
+    padding-top: 0;
+  }
+  .features {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-top: 64px;
+    margin: 0 auto;
+    gap: 24px;
+  }
+  .features__card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 279px;
+    width: 100%;
+    margin: 0 auto;
+    height: 382px;
+    background-color: #0E8784;
+    border-radius: 8px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .featured__info {
+    margin: 0 auto;
+  }
+  .features__title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: start;
+    margin: 0 auto 16px;
+  }
+  .features__text {
+    max-width: 212px;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+
 /* How it works Section Style */
-.steps__section {
+.step {
   position: relative;
   padding: 100px 80px;
 }
@@ -620,10 +930,11 @@ body {
 hr {
   border: none;
   height: 1px;
-  width: 760px;
+  max-width: 760px;
   border: 2px solid #FDD6BA;
   background-color: #FDD6BA;
   position: absolute;
+  width: 100%;
 }
 
 .step__spans {
@@ -638,7 +949,8 @@ hr {
 
 .step__span {
   display: block;
-  width: 31px;
+  max-width: 31px;
+  width: 100%;
   height: 31px;
   border: 2px solid #0E8784;
   background-color: #FEFCF7;
@@ -654,7 +966,7 @@ hr {
 }
 
 .step__number {
-  display: inline-block;
+  margin: 0 auto;
   font-size: 72px;
   font-weight: 900;
   font-family: "Fraunces", serif;
@@ -663,7 +975,7 @@ hr {
 }
 
 .step-subtitle {
-  width: 255px;
+  max-width: 255px;
   font-size: 32px;
   font-weight: 900;
   font-family: "Fraunces", serif;
@@ -672,7 +984,7 @@ hr {
 }
 
 .step__discription {
-  width: 285px;
+  max-width: 285px;
   font-size: 16px;
   font-weight: 400;
   color: #333D4B;
@@ -699,6 +1011,112 @@ hr {
   background-color: #229492dc;
   -webkit-box-shadow: 1px 1px 3px #cccbcb;
           box-shadow: 1px 1px 3px #cccbcb;
+}
+
+@media (max-width: 768px) {
+  .step {
+    position: relative;
+    padding: 144px 0 50px;
+  }
+  .step__title {
+    margin-bottom: 40px;
+  }
+  .step__number {
+    margin-bottom: 42px;
+  }
+  .step-subtitle {
+    max-width: 180px;
+    font-size: 28px;
+    margin-bottom: 38px;
+  }
+  .step__discription {
+    max-width: 223px;
+    width: 100%;
+    font-size: 15px;
+    font-weight: 400;
+    color: #333D4B;
+    line-height: 25px;
+    margin-bottom: 44px;
+  }
+  hr {
+    border: none;
+    height: 1px;
+    max-width: 497px;
+    border: 2px solid #FDD6BA;
+    background-color: #FDD6BA;
+    position: absolute;
+    width: 100%;
+  }
+  .step__spans {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 202px;
+    position: relative;
+    top: 26px;
+    z-index: 5;
+  }
+  .step__cards {
+    gap: 50px;
+    margin-top: 48px;
+  }
+  .step__card {
+    max-width: 223px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .step {
+    position: relative;
+    padding: 144px 0 50px;
+    margin-top: 500px;
+    text-align: center;
+  }
+  .step__title {
+    margin-bottom: 80px;
+  }
+  .step__number {
+    margin-bottom: 24px;
+  }
+  .step-subtitle {
+    max-width: 327px;
+    font-size: 28px;
+    margin: 24px auto;
+  }
+  .step__discription {
+    max-width: 327px;
+    width: 100%;
+    font-size: 15px;
+    font-weight: 400;
+    color: #333D4B;
+    line-height: 25px;
+    margin: 0 auto;
+  }
+  .step__link {
+    margin-top: 79px;
+  }
+  hr {
+    display: none;
+  }
+  .step__spans {
+    display: none;
+  }
+  .step__cards {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 56px;
+    margin-top: 48px;
+  }
+  .step__card {
+    max-width: 327px;
+    width: 100%;
+  }
 }
 
 /* Hero Section Style */
@@ -853,9 +1271,6 @@ hr {
 }
 
 @media (max-width: 576px) {
-  .container {
-    padding: 0 24px;
-  }
   .box {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -986,9 +1401,6 @@ hr {
 }
 
 @media (max-width: 576px) {
-  .container {
-    padding: 0 25px;
-  }
   .cards {
     position: relative;
     display: -webkit-box;
