--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -32,9 +32,32 @@
 
 
 
+// Table
+@media (max-width:630px){
+    .header{
+
+        &__list{
+            display: none;
+        }
+
+        &__burger{
+            display: block;
+        }
+
+        &__img{
+            width: 163px;
+            height: 18px;
+        }
+    }
+}
+
+
 // Mobile
 @media (max-width:576px){
     .header{
+
+        // justify-content: flex-start;
+        // gap: 148px;
 
         &__list{
             display: none;
