--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -16,7 +16,7 @@
         font-size: 40px;
         font-weight: 900;
         font-family: "Fraunces", serif;
-        color: deeppink;
+        color: rgb(139, 0, 74);
         margin-bottom: 24px;
     }
 
