--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -17,6 +17,8 @@
         letter-spacing: 1px;
         text-transform: uppercase;
         color: $color-menu;
+        transition: all 0.3s ease;
+        background-color: red;
     }
 
     &__item--link:hover{
