--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -5,6 +5,7 @@
     align-items: center;
     padding-top: 43px;
     padding-bottom: 43px;
+    background-color: red;
 
     &__list{
         display: flex;
